[gd_scene load_steps=4 format=3 uid="uid://dqwedwedwn32"]

[ext_resource type="Script" uid="uid://qayymwuuheyr" path="res://evidence/item_information.gd" id="1_g7w0n"]
[ext_resource type="Texture2D" uid="uid://b5bqlfpvkfvdh" path="res://assets/hex_viewer/window.png" id="1_kxa1e"]
[ext_resource type="Theme" uid="uid://b518a15p4qy0m" path="res://pc_components.tres" id="3_kxa1e"]

[node name="item_information" type="NinePatchRect"]
offset_left = 111.0
offset_top = 43.0
offset_right = 272.0
offset_bottom = 136.0
texture = ExtResource("1_kxa1e")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
script = ExtResource("1_g7w0n")

[node name="sort" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 157.0
offset_bottom = 89.0

[node name="case_no" type="LineEdit" parent="sort"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
placeholder_text = "case_no"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="evidence_no" type="LineEdit" parent="sort"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
placeholder_text = "evidence_no"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="unique_desc" type="LineEdit" parent="sort"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
placeholder_text = "unique_desc"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="examiner" type="LineEdit" parent="sort"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
placeholder_text = "examiner"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="notes" type="LineEdit" parent="sort"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
placeholder_text = "notes"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="navigation" type="HBoxContainer" parent="sort"]
layout_mode = 2
alignment = 2

[node name="back" type="Button" parent="sort/navigation"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
text = "back"

[node name="next" type="Button" parent="sort/navigation"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
text = "finish"

[node name="cancel" type="Button" parent="sort/navigation"]
layout_mode = 2
theme = ExtResource("3_kxa1e")
text = "cancel"

[connection signal="pressed" from="sort/navigation/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="sort/navigation/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="sort/navigation/cancel" to="." method="_on_cancel_pressed"]
